Added SSE support